new color is add

--- a/CsswithcolorAndSelector.html
+++ b/CsswithcolorAndSelector.html
@@ -30,7 +30,7 @@
     </p>
 
     <div id="box">
-      <text style="color: red"
+      <text style="color: blue"
         ><b
           ><u
             >Hello i'm Div i'm using id selector for applying css on
@@ -120,6 +120,12 @@
         <p>this is Third  paragraph of wow div </p>
         <p>this is fourth  paragraph of wow div </p>
         <h6>I'm heading</h6>
+        </div>
+        <div class="bigDiv">
+          <h1>Hello i' new div</h1>
+        </div>
+        <div class="another">
+          hello
         </div>
         
   </body>
